--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "italy = None # 'Italy'\n",
+    "italy = \n",
     "italy"
    ]
   },
