Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = countries()\n",
+    "kindof_neighbors = countries[2:7]\n",
     "kindof_neighbors"
    ]
   },
