Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,11 +244,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Argentina', 'Mexico', 'Mexico', 'Morocco', 'New Mexico']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "kindof_neighbors = countries[2:7]\n",
+    "kindof_neighbors = scountries[2:7]\n",
     "kindof_neighbors"
    ]
   },
