Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -259,7 +259,7 @@
     }
    ],
    "source": [
-    "kindof_neighbors = scountries[2:7]\n",
+    "kindof_neighbors = countries[2:7]\n",
     "kindof_neighbors"
    ]
   },
