--- a/index.ipynb
+++ b/index.ipynb
@@ -244,22 +244,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Argentina', 'Mexico', 'Mexico', 'Morocco', 'New Mexico']"
+       "{'Argentina', 'Mexico', 'Morocco', 'New Mexico'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "kindof_neighbors = countries[2:7]\n",
+    "kindof_neighbors = set(kindof_neighbors)\n",
     "kindof_neighbors"
    ]
   },
