Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,22 +244,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-2f7fc0cd60ff>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-2f7fc0cd60ff>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    type kindof_neighbors\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "kindof_neighbors = countries[2:7]\n",
     "kindof_neighbors = set(kindof_neighbors)\n",
-    "type (kindof_neighbors"
+    "kindof_neighbors = list "
    ]
   },
   {
