--- a/index.ipynb
+++ b/index.ipynb
@@ -244,24 +244,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "set"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "kindof_neighbors = countries[2:7]\n",
     "kindof_neighbors = set(kindof_neighbors)\n",
-    "kindof_neighbors = list "
+    "kindof_neighbors = list(kindof_neighbors) "
    ]
   },
   {
