Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,8 @@
    ],
    "source": [
     "countries.append('Malta')\n",
-    "countries"
+    "countries.remove(3)\n",
+    "countri"
    ]
   },
   {
