Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,7 @@
    ],
    "source": [
     "countries.append('Malta')\n",
-    "countries.remove[3]\n",
+    "countries.remove()\n",
     "countries"
    ]
   },
