Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -316,7 +316,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append('Thailand')\n",
+    "cou"
    ]
   },
   {
