Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -312,38 +312,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Argentina',\n",
+       "{'Argentina',\n",
+       " 'Canada',\n",
+       " 'Croatia',\n",
+       " 'Finland',\n",
+       " 'Italy',\n",
+       " 'Malta',\n",
        " 'Mexico',\n",
        " 'Morocco',\n",
        " 'New Mexico',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'Italy',\n",
-       " 'Canada',\n",
        " 'South Korea',\n",
-       " 'Malta',\n",
-       " 'Malta',\n",
-       " 'Malta',\n",
-       " 'Malta',\n",
-       " 'Thailand']"
+       " 'Thailand',\n",
+       " 'USA'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "countries.append('Thailand')\n",
-    "setcountries"
+    "set(countries)"
    ]
   },
   {
