Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -355,9 +355,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries \n",
-    "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', \n",
-    "# 'Argentina', 'Italy',  'Canada', 'South Korea',  'Malta',  'Thailand']"
+    "countries[11] = 'USA'\n",
+    "countries"
    ]
   },
   {
