Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -395,34 +395,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Argentina',\n",
-       " 'Canada',\n",
-       " 'Croatia',\n",
-       " 'Finland',\n",
-       " 'Italy',\n",
-       " 'Malta',\n",
-       " 'Mexico',\n",
-       " 'Morocco',\n",
-       " 'New Mexico',\n",
-       " 'South Korea',\n",
-       " 'Thailand',\n",
-       " 'USA'}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "set(countries)\n",
-    "countries = list(co)"
+    "countries = list(countries)"
    ]
   },
   {
