--- a/index.ipynb
+++ b/index.ipynb
@@ -511,7 +511,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries ="
+    "unique_countries = set(countries)"
    ]
   },
   {
@@ -520,8 +520,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries  # ['USA', 'Finland', 'Argentina', 'South Korea', 'Morocco',\n",
-    "#'Croatia','Mexico','Malta','Italy','Canada']"
+    "unique_countries "
    ]
   },
   {
