--- a/index.ipynb
+++ b/index.ipynb
@@ -557,8 +557,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = None\n",
-    "num_of_repeats # 3"
+    "num_of_repeats =len(countries)\n",
+    "num_of_repea"
    ]
   },
   {
