Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -558,7 +558,7 @@
    "outputs": [],
    "source": [
     "num_of_repeats =len(countries)\n",
-    "num_of_repea"
+    "num_of_repeats_2 =len(unique_countries) "
    ]
   },
   {
