--- a/index.ipynb
+++ b/index.ipynb
@@ -553,12 +553,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num_of_repeats =len(countries)\n",
-    "num_of_repeats_2 =len(unique_countries) "
+    "num_of_repeats_2 =len(unique_countries) \n",
+    "num_of_repeats\n",
+    "num_of_repeats_2"
    ]
   },
   {
